# disto-analyzer

./: CMakeLists.txt  main.cpp  main_window.ui
